--- a/src/content/prospective/applying.mdx
+++ b/src/content/prospective/applying.mdx
@@ -1,1 +1,11 @@
 export const title = "Applying to Peterhouse"
+
+As with any other college, you will apply directly to Peterhouse, not to the university itself. Subject-specific application requirements can be found on the [college website](https://www.pet.cam.ac.uk/courses), and you can always [email](mailto:admissions@pet.cam.ac.uk) college to find out more or ask specific questions.
+
+Applying to Peterhouse will sometimes involve sitting an admission test (such as the Economics Admissions Assessment or the History Admissions Test). These tests will often be taken in college itself, when you arrive for your interview. All candidates will be interviewed as part of their application. Although the number and length of interviews often varies according to subjects, candidates tend to be interviewed twice, with each interview lasting 20 minutes to half an hour.  
+
+Interviews take place in early December and candidates are invited to sit them in Peterhouse. For those in local authority care or in receipt of free school meals, travel costs can be reimbursed, and for candidates who live overseas, interviews are sometimes available in Asia or North America. For more information, feel free to [email](mailto:admissions@pet.cam.ac.uk) college!
+
+If you are offered a place, you will be notified in early to mid-January. Depending on your educational status, you will either be offered an unconditional offer (if you have already finished your secondary education) or a conditional one, subject to a certain grade in your secondary school exams.  
+
+For more information, please visit the [college website.](https://www.pet.cam.ac.uk/applying-peterhouse)
