--- a/src/content/sports-and-societies/introduction.mdx
+++ b/src/content/sports-and-societies/introduction.mdx
@@ -4,4 +4,4 @@ export const title = "Introduction"
 
 Peterhouse offers a very wide variety of student-run clubs and societies - including sports, academic and political societies, gaming and expressive arts! Everyone is welcome to sign up for as many societies or teams as they would like to, and each strives to create a friendly and fun atmosphere for its members. Students often say that these clubs and societies offer a fantastic opportunity to try something new, meet people in college and enjoy a (hopefully!) well-earned break from work. During Freshers' Week there will be an event where you can discover what's on offer and sign up, but you can join at any time or find out more about a society or club by contacting the president or captain. There are already loads of things on offer but if anyone would like to create a new club or society then this is very possible and simple; the Amals (Amalgamated Clubs) committee is always happy to help with any queries.
 
-For a complete list of sports and societies, Amals has this document right [here](/jcr-website/public/Sports%20and%20Societies.pdf)
+For a complete list of sports and societies, Amals has this document right [here](/jcr-website/Sports%20and%20Societies.pdf)
