Added new minutes and updated links

--- a/src/content/JCRDocs/1_open_minutes.mdx
+++ b/src/content/JCRDocs/1_open_minutes.mdx
@@ -1,5 +1,7 @@
 export const title = 'Open Meeting Minutes'
 
-The last JCR open meeting was held on 07 March 2024.
+The last JCR open meeting was held on 06 May 2024.  
+You can view the minutes <a href="././Open_Meeting/1_060524.pdf" target="_blank" rel="noopener noreferrer" style={{textDecoration: "underline"}}>here</a>.
 
-You can view the minutes <a href="././Open_Meeting/0_070324.pdf" target="_blank" rel="noopener noreferrer" style={{textDecoration: "underline"}}>here</a>.
+Previous open meeting minutes:  
+<a href="././Open_Meeting/0_070324.pdf" target="_blank" rel="noopener noreferrer" style={{textDecoration: "underline"}}>07 March 2024</a>  
