--- a/src/content/JCRDocs/2_comm_minutes.mdx
+++ b/src/content/JCRDocs/2_comm_minutes.mdx
@@ -1,5 +1,7 @@
 export const title = 'Committee Meeting Minutes'
 
-The last JCR committee meeting was held on  20 February 2024. 
+The last JCR committee meeting was held on 04 May 2024.  
+You can view the minutes <a href="././Comm_Meeting/1_040524.pdf" target="_blank" rel="noopener" style={{textDecoration: "underline"}}>here</a>.
 
-You can view the minutes <a href="././Comm_Meeting/0_200224.pdf" target="_blank" rel="noopener" style={{textDecoration: "underline"}}>here</a>. 
+Previous committee meeting minutes:  
+<a href="././Comm_Meeting/0_200224.pdf" target="_blank" rel="noopener" style={{textDecoration: "underline"}}>20 February 2024</a>  
