--- a/src/content/JCRDocs/2_comm_minutes.mdx
+++ b/src/content/JCRDocs/2_comm_minutes.mdx
@@ -1,7 +1,8 @@
 export const title = 'Committee Meeting Minutes'
 
-The last JCR committee meeting was held on 04 May 2024.  
-You can view the minutes <a href="././Comm_Meeting/1_040524.pdf" target="_blank" rel="noopener" style={{textDecoration: "underline"}}>here</a>.
+The last JCR committee meeting was held on 16 June 2024.  
+You can view the minutes <a href="././Comm_Meeting/2_160624.pdf" target="_blank" rel="noopener" style={{textDecoration: "underline"}}>here</a>.
 
 Previous committee meeting minutes:  
+<a href="././Comm_Meeting/1_040524.pdf" target="_blank" rel="noopener" style={{textDecoration: "underline"}}>04 May 2024</a>  
 <a href="././Comm_Meeting/0_200224.pdf" target="_blank" rel="noopener" style={{textDecoration: "underline"}}>20 February 2024</a>  
