Added 02 Dec 24 open meeting minutes

--- a/src/content/JCRDocs/1_open_minutes.mdx
+++ b/src/content/JCRDocs/1_open_minutes.mdx
@@ -1,7 +1,8 @@
 export const title = 'Open Meeting Minutes'
 
-The last JCR open meeting was held on 06 May 2024.  
-You can view the minutes <a href="././Open_Meeting/1_060524.pdf" target="_blank" rel="noopener noreferrer" style={{textDecoration: "underline"}}>here</a>.
+The last JCR open meeting was held on 02 December 2024.  
+You can view the minutes <a href="././Open_Meeting/2_021224.pdf" target="_blank" rel="noopener noreferrer" style={{textDecoration: "underline"}}>here</a>.
 
 Previous open meeting minutes:  
+<a href="././Open_Meeting/1_060524.pdf" target="_blank" rel="noopener noreferrer" style={{textDecoration: "underline"}}>06 May 2024</a><br/>
 <a href="././Open_Meeting/0_070324.pdf" target="_blank" rel="noopener noreferrer" style={{textDecoration: "underline"}}>07 March 2024</a>  
