reformat the intro page

--- a/src/content/sports-and-societies/introduction.mdx
+++ b/src/content/sports-and-societies/introduction.mdx
@@ -1,6 +1,6 @@
 export const title = "Introduction"
 
-Peterhouse offers a wide variety of student-run clubs and societies — from sports and academic groups to political, gaming, and expressive arts societies. Everyone is welcome to join as many societies or teams as they like, and each group strives to maintain a friendly and fun atmosphere.
+Peterhouse offers a wide variety of student-run clubs and societies — from sports and academic groups to political, gaming, and expressive arts societies. Everyone is welcome to join as many societies or teams as they like, and each group strives to create a friendly and fun atmosphere.
 
 These clubs and societies provide fantastic opportunities to try something new, meet people in college, and enjoy a (hopefully!) well-earned break from work.
 
@@ -8,11 +8,8 @@ During Freshers' Week, there will be an event where you can explore what’s on 
 
 There’s already a great range of options available, but if you’re interested in starting a new club or society, that’s absolutely possible. The Amals (Amalgamated Clubs) committee is always happy to help with any questions.
 
-📄 **For a complete list of current sports and societies, check out this document:**  
-[AMALS_23guide.pdf](AMALS_23guide.pdf)
+📄 For a complete list of current sports and societies, check out this document [here](AMALS_23guide.pdf).
 
-📧 **For any queries about sports or societies, contact:**  
-**AMALs President** — Arlo Alexander (aa2627@cam.ac.uk)
+📧 For any queries about sports or societies, contact our current AMALs President — Arlo Alexander (aa2627@cam.ac.uk).
 
-📝 **To start a new society, fill in this form:**  
-[Google Form](https://forms.gle/G5oTr473892yRfEW6)
+📝 To start a new society, fill in this [form](https://forms.gle/G5oTr473892yRfEW6).
