--- a/src/content/sports-and-societies/introduction.mdx
+++ b/src/content/sports-and-societies/introduction.mdx
@@ -8,7 +8,7 @@ During Freshers' Week, there will be an event where you can explore what’s on 
 
 There’s already a great range of options available, but if you’re interested in starting a new club or society, that’s absolutely possible. The Amals (Amalgamated Clubs) committee is always happy to help with any questions.
 
-📄 For a complete list of current sports and societies, check out this document [here](AMALS_23guide.pdf).
+📄 For a complete list of current sports and societies, check out this document [here](AMALS_2526.pdf).
 
 📧 For any queries about sports or societies, contact our current AMALs President — Arlo Alexander (aa2627@cam.ac.uk).
 
