--- a/src/content/sports-and-societies/societiesList.mdx
+++ b/src/content/sports-and-societies/societiesList.mdx
@@ -2,25 +2,19 @@ export const title = "List of Societies"
 
 Here's a full list of everything Peterhouse currently has to offer:
 
-- Peterhouse Amnesty International Society
-- Art Club
-- Beard Society (Peterhouse Feminist Society)
-- Bibliophile Society
-- Board Games Society
-- Card Games Society
-- Caseus Society (Cheese Society)
-- Chapel Choir
-- Cookie Club
-- Peterhouse Cross-Keys Society (Peterhouse Sports Society)
-- Dungeons & Dragons Society
-- Heywood (Dramatic) Society
-- Cambridge Invisibles
-- The Kelvin Club (Peterhouse Science Society)
-- Peterhouse Law Society
-- Peterhouse Medical Society
-- Peterhouse Music Society
-- November 11th Society (Peterhouse Maths Society)
-- The Perne Club (Peterhouse Humanities Discussion Society)
-- Peterhouse Politics Society
-- Pet Rock Society (Peterhouse Rock Climbing Society)
-- Trumpington Street Orchestra
+- Peterhouse Art Club
+- Beard Society 
+- Board Games Society 
+- Caseus Club 
+- Chapel Choir 
+- Peterhouse and Pembroke Christian Union 
+- Classics Society
+- Peterhouse Cross-Keys Society 
+- History Society 
+- The Kelvin Club  
+- The Law Society
+- Modern Languages and Linguistics Society 
+- Peterhouse Music Society 
+- Peterhouse Politics Society 
+- Trumpington Street Orchestra 
+- Wine Tasting Society
