--- a/src/content/sports-and-societies/sportsList.mdx
+++ b/src/content/sports-and-societies/sportsList.mdx
@@ -2,14 +2,13 @@ export const title = "List of Sports"
 
 Here's a full list of everything Peterhouse currently has to offer:
 
-- Badminton Team
-- Women's Basketball Team
-- The Boat Club
-- Women's/Men's Football Team
-- Peterhouse & Corpus Christi College Hockey Team
-- Lacrosse Team
-- Women's/Mixed Netball Team
-- Selwyn-Peterhouse Rugby Team
-- Squash Team
-- Table Tennis Team
-- Tennis Team
+- Badminton Club
+- Men’s Basketball  
+- The Boat Club 
+- Men’s Football Team 
+- Mixed Netball Club
+- PetRock 
+- PetRun
+- Pool Club 
+- Ultimate Frisbee  
+- Volleyball Club
